  display message.

  * "Long lines", those which begin and end in non-adjacent squares,
  are now saved in a separate list.  This guarantees they will always
  be displayed.  The extra expense is similar to that for polygons,
  which are also not displayed "by square". (*)

  * Support for Canadian RNF maps added.
  
  * Support for US State boundary maps added.

  * AGG support.  GTK2 can now display using anti-aliased lines. (*)

  * Long and right clicks can now bring up a configurable popup menu.

  * Extended the implementation of popup menus -- they can now be bound
  to other menu items, which allows for cascading menu
  effects.  Popups can also be bound to toolbar buttons.

  * On-screen state indicators and control points (i.e. active icons)
  based on RoadMap sprites, for display and control of some RoadMap
  features.  On-screen sprites can now invoke any action or popup,
  just as menus and toolbar buttons can. (*)

  * 3D "perspective" viewing mode mode. (*)

  * Railroads will now be displayed.

  * Performance improvements (both space and time) for very sparse maps.

  * GTK/GTK2 dialogs are now modeless.

  * Allow for more polygons (from 65K to 1M).

  * Additional QT support for tooltips, button icons, initial
  width/height settings.  New QT4 support.

  * Makefiles rewritten for better modularity and readability.  Rules
  for tarball creation incorporated into makefiles.

  * rdmgenmaps is now easier to use -- can now specify a state name.  Also,
  all of the rdmgenxxxxx scripts now take a more uniform set of options, and
  they all have proper usage messages.

  * buildus got a new "-c" option, which tells it to look for maps
  along the configured Map.Path preferences item. 

  * Can now replay NMEA data from a file (produced, for example, by gpsbabel)

  * Signals are now caught gracefully, so that unsaved
  landmark/trip/track files can be preserved.

  * Performance improvements -- if processing a county above a